﻿                     wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.16 (Beta 2)
* Improved tolerance of wxBitmap properties to old project files.
  This resolves FS#78.

01-09-2007 Version 3.00.15 (Beta 2)
+ Added new splash screen.
* Fixed a focus bug that crashed when adding a sizer in certain container
  widgets.

01-04-2007 Version 3.00.14 (Beta 2)
+ Added all known events to the common tab.
+ Added descriptions of the subproperties for bitmap properties
+ Added support for using the non-default editors in the property grid.
  Just add 'editor="Name"' to your xml element for the property.
+ Added a warning about the removal of the "user_headers" property during
  the project import process.
+ The selection border can be drawn even when it extends beyond the edge of
  the inner content panel.
+ Catching left clicks on the title bar of innerframe in order to select it.
+ Added wxSL_BOTH style flag to wxSlider.
+ Added encoding check for all loaded xml files. The means that the xml files
  must have a declaration, and the encoding must be UTF-8. If it is not, wxFB
  will offer to convert the file, from a user chosen original encoding. This
  resolves FS#69.
+ Add the .fbp extension when saving if none is chosen. (this is really only
  an linux issue)
+ Added a shortcut to the "XRC Window" menu item.
+ Added property to skip frame's main sizer generation in certain cases for xrc code
* Now using ints instead of uints for min, max, and val on wxSlider.
* Now remembering right splitter size in classic gui.
* Fixed wxSlider XRC generation for the minValue and maxValue properties.
* Status bar now stays on the bottom of the frame even when the sizer is empty.
- Removed SetVendorName, it just added a level to the hierarchy in the windows
  registry.
^ Single Instance Stuff:
    Prefixed lockfiles with '.' so they are hidden.